# parcelmate

./: .gitignore  CLUSTER.md  GOAL.md  README.md  cory-shain..pbs  pyproject.toml
parcelmate/: constants.py  data.py  model.py  plot.py  util.py
parcelmate/c_outputs/: FINDINGS.md
parcelmate/c_outputs/iter0_smoke/mean/: loss_summary.csv
parcelmate/c_outputs/iter0_smoke/sweep/: dashboard.html  index.md
parcelmate/c_outputs/iter0_smoke/zero/: loss_summary.csv
parcelmate/c_outputs/iter1/sweep/: dashboard.html  index.md  manifest.yaml
parcelmate/c_outputs/iter2/knockout_mode-mean__knockout_thresh-0.9/: loss_summary.csv
parcelmate/c_outputs/iter2/knockout_mode-zero__knockout_thresh-0.9/: loss_summary.csv
parcelmate/c_outputs/iter2/sweep/: dashboard.html  index.md
parcelmate/c_outputs/sweeps/knockout/: dashboard.html  index.md  manifest.local.yaml
parcelmate/c_outputs/sweeps/knockout_iter2/: index.md  (+3 more)
parcelmate/configs/: bare.yaml  config.yaml  cory-shain.yaml  knockout.yaml  knockout_cluster.yaml  knockout_iter2.yaml  knockout_scale.yaml  knockout_smoke.yaml  sweep_knockout.yaml  sweep_knockout_iter2.yaml  sweep_knockout_scale.yaml  sweep_knockout_smoke.yaml  sweep_nnetworks.yaml
sweep_nnetworks/: dashboard.html  index.md  manifest.yaml
sweep_nnetworks/configs/: nnetworks__n_networks-100.yaml  nnetworks__n_networks-25.yaml  nnetworks__n_networks-50.yaml  nnetworks__n_networks-75.yaml
sweep_nnetworks/jobs/: nnetworks__n_networks-100.pbs  nnetworks__n_networks-25.pbs  nnetworks__n_networks-50.pbs  nnetworks__n_networks-75.pbs
test/: test_knockout.py
(+36 files in other folders)
